...

                    <TextView
                        android:id="@+id/textview_activity_defaults_accesstype_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <GridLayout
                        android:id="@+id/radiogroup_activity_defaults_accesstype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_defaults_address_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_defaults_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_defaults_port_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_defaults_port"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_defaults_interval_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_activity_defaults_interval"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_activity_defaults_interval_minutes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_defaults_ping_count_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_activity_defaults_ping_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_defaults_ping_package_size_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_activity_defaults_ping_package_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_defaults_connect_count_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_activity_defaults_connect_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_defaults_stop_on_success_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_defaults_stop_on_success"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_activity_defaults_stop_on_success_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_activity_defaults_resolve_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_defaults_resolve_rules_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_activity_defaults_certificate_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_defaults_certificate_settings_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_activity_defaults_snmp_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_defaults_snmp_settings_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_defaults_only_wifi_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_defaults_only_wifi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_activity_defaults_only_wifi_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_defaults_notification_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_defaults_notification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textview_activity_defaults_notification_on_off"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textview_activity_defaults_high_prio_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switch_activity_defaults_high_prio"
