...
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="activity_defaults_title">Defaults</string>
    <string name="menu_action_activity_defaults_reset">Reset</string>
    <string name="label_activity_defaults_defaults">Defaults</string>
    <string name="label_activity_defaults_address">Host / URL</string>
    <string name="label_activity_defaults_port">Port</string>
    <string name="label_activity_defaults_interval">Interval</string>
    <string name="label_activity_defaults_ping_count">Ping count</string>
    <string name="label_activity_defaults_ping_package_size">Ping package size</string>
    <string name="label_activity_defaults_connect_count">Connect count</string>
    <string name="label_activity_defaults_resolve_rules">HTTP resolve rules</string>
    <string name="label_activity_defaults_stop_on_success">Stop on success</string>
    <string name="label_activity_defaults_certificate_settings">HTTP certificate settings</string>
    <string name="label_activity_defaults_global_headers">HTTP Headers</string>
    <string name="text_activity_defaults_global_headers_none">None</string>
    <string name="text_activity_defaults_global_headers_more" tools:ignore="PluralsCandidate">%d more…</string>
    <string name="text_activity_defaults_global_headers_less">less…</string>
    <string name="label_activity_defaults_snmp_settings">SNMP settings</string>
    <string name="label_activity_defaults_only_wifi">Only on WiFi</string>
    <string name="label_activity_defaults_notification">Notifications</string>
    <string name="label_activity_defaults_high_prio">High priority</string>
    <string name="label_activity_defaults_accesstype">Type</string>
    <integer name="activity_defaults_global_headers_text_size_normal">14</integer>
    <integer name="activity_defaults_global_headers_text_size_smaller">12</integer>
    <integer name="activity_defaults_global_headers_text_size_small">10</integer>
    <integer name="activity_defaults_global_headers_max_value_lines">5</integer>
    <integer name="activity_defaults_global_headers_max_value_visible_headers">5</integer>
</resources>
