...

            <TextView
                android:id="@+id/textview_dialog_resolve_edit_match_host_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:labelFor="@id/edittext_dialog_resolve_edit_match_host"
                android:text="@string/label_dialog_resolve_edit_match_host" />

            <EditText
                android:id="@+id/edittext_dialog_resolve_edit_match_host"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textUri|textMultiLine|textNoSuggestions"
                android:scrollHorizontally="false"
                android:maxLines="@integer/edittext_dialog_resolve_edit_match_host_max_lines"
                android:text=""
                tools:ignore="LabelFor" />

...

            <TextView
                android:id="@+id/textview_dialog_resolve_edit_match_port_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:labelFor="@id/edittext_dialog_resolve_edit_match_port"
                android:text="@string/label_dialog_resolve_edit_match_port" />

            <EditText
                android:id="@+id/edittext_dialog_resolve_edit_match_port"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
...

            <TextView
                android:id="@+id/textview_dialog_resolve_edit_connect_to_host_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:labelFor="@id/edittext_dialog_resolve_edit_connect_to_host"
                android:text="@string/label_dialog_resolve_edit_connect_to_host" />

            <EditText
                android:id="@+id/edittext_dialog_resolve_edit_connect_to_host"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
...

            <TextView
                android:id="@+id/textview_dialog_resolve_edit_connect_to_port_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:labelFor="@id/edittext_dialog_resolve_edit_connect_to_port"
                android:text="@string/label_dialog_resolve_edit_connect_to_port" />

            <EditText
                android:id="@+id/edittext_dialog_resolve_edit_connect_to_port"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
...
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_resolve_edit_ok"
                app:srcCompat="@drawable/icon_ok_selector" />

            <ImageView
                android:id="@+id/imageview_dialog_resolve_edit_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_resolve_edit_cancel"
...
