...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/linearlayout_dialog_certificate_settings_allow_legacy_tls_onoff_margin_top"
                android:orientation="horizontal">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_dialog_certificate_settings_allow_legacy_tls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/switch_dialog_certificate_settings_padding_top"
                    android:paddingBottom="@dimen/switch_dialog_certificate_settings_padding_bottom"
                    android:minHeight="@dimen/switch_dialog_certificate_settings_min_height"
                    app:trackTint="@drawable/switchtrack_selector"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/linearlayout_dialog_certificate_settings_ignore_ssl_error_onoff_margin_top"
                android:orientation="horizontal">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_dialog_certificate_settings_ignore_ssl_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/switch_dialog_certificate_settings_padding_top"
                    android:paddingBottom="@dimen/switch_dialog_certificate_settings_padding_bottom"
                    android:minHeight="@dimen/switch_dialog_certificate_settings_min_height"
                    app:trackTint="@drawable/switchtrack_selector"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/linearlayout_dialog_certificate_settings_failure_on_certificate_expiry_onoff_margin_top"
                android:orientation="horizontal">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_dialog_certificate_settings_failure_on_certificate_expiry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/switch_dialog_certificate_settings_padding_top"
                    android:paddingBottom="@dimen/switch_dialog_certificate_settings_padding_bottom"
                    android:minHeight="@dimen/switch_dialog_certificate_settings_min_height"
                    app:trackTint="@drawable/switchtrack_selector"
...

            <TextView
                android:id="@+id/textview_dialog_certificate_settings_expiry_days_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:labelFor="@id/edittext_dialog_certificate_settings_expiry_days"
                android:text="@string/label_dialog_certificate_settings_expiry_days" />

            <EditText
                android:id="@+id/edittext_dialog_certificate_settings_expiry_days"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
...
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_certificate_settings_ok"
                app:srcCompat="@drawable/icon_ok_selector" />

            <ImageView
                android:id="@+id/imageview_dialog_certificate_settings_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_certificate_settings_cancel"
...
