/*
 * Copyright (c) 2026 Alwin Ibba
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package net.ibbaa.keepitup.ui;

import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.longClick;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.doesNotExist;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.RootMatchers.isPlatformPopup;
import static androidx.test.espresso.matcher.ViewMatchers.hasChildCount;
import static androidx.test.espresso.matcher.ViewMatchers.isChecked;
import static androidx.test.espresso.matcher.ViewMatchers.isDescendantOfA;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isNotChecked;
import static androidx.test.espresso.matcher.ViewMatchers.isRoot;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withSpinnerText;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.instanceOf;
import static org.hamcrest.Matchers.is;
import static org.hamcrest.core.IsNot.not;
import static org.junit.Assert.assertEquals;
import static org.junit.Assert.assertFalse;
import static org.junit.Assert.assertTrue;

import android.content.Context;
import android.content.SharedPreferences;

import androidx.test.core.app.ActivityScenario;
import androidx.test.espresso.action.ViewActions;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.MediumTest;

import net.ibbaa.keepitup.R;
import net.ibbaa.keepitup.db.DBSetup;
import net.ibbaa.keepitup.model.AccessType;
import net.ibbaa.keepitup.model.Header;
import net.ibbaa.keepitup.model.HeaderType;
import net.ibbaa.keepitup.model.SNMPAuthAlgorithm;
import net.ibbaa.keepitup.model.SNMPPrivAlgorithm;
import net.ibbaa.keepitup.model.SNMPTransport;
import net.ibbaa.keepitup.model.SNMPVersion;
import net.ibbaa.keepitup.resources.PreferenceManager;
import net.ibbaa.keepitup.test.mock.MockClipboardManager;
import net.ibbaa.keepitup.test.mock.TestRegistry;
import net.ibbaa.keepitup.ui.dialog.CertificateSettingsDialog;
import net.ibbaa.keepitup.ui.dialog.SNMPDefaultsDialog;
import net.ibbaa.keepitup.ui.dialog.SettingsInputDialog;
import net.ibbaa.keepitup.ui.sync.HeaderSyncHandler;
import net.ibbaa.keepitup.util.StringUtil;

import org.junit.After;
import org.junit.Before;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.util.List;

@MediumTest
@SuppressWarnings({"SequencedCollectionMethodCanBeUsed"})
@RunWith(AndroidJUnit4.class)
public class DefaultsActivityTest extends BaseUITest {

    @Before
    public void beforeEachTestMethod() {
        super.beforeEachTestMethod();
        DBSetup dbSetup = new DBSetup(TestRegistry.getContext());
        dbSetup.initializeHeaderTable();
        resetGlobalHeaderHandler();
    }

    @After
    public void afterEachTestMethod() {
        super.afterEachTestMethod();
        resetGlobalHeaderHandler();
    }

    @Test
    public void testDisplayDefaultValues() {
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(DefaultsActivity.class);
        PreferenceManager preferenceManager = getPreferenceManager();
        assertEquals(AccessType.PING, preferenceManager.getPreferenceAccessType());
        assertEquals("192.168.178.1", preferenceManager.getPreferenceAddress());
        assertEquals(22, preferenceManager.getPreferencePort());
        assertEquals(15, preferenceManager.getPreferenceInterval());
        assertEquals(3, preferenceManager.getPreferencePingCount());
        assertEquals(56, preferenceManager.getPreferencePingPackageSize());
        assertEquals(1, preferenceManager.getPreferenceConnectCount());
        assertFalse(preferenceManager.getPreferenceStopOnSuccess());
        assertFalse(preferenceManager.getPreferenceIgnoreSSLError());
        assertEquals(SNMPVersion.V2C, preferenceManager.getPreferenceSNMPVersion());
        assertEquals(161, preferenceManager.getPreferenceSNMPPort());
        assertEquals(SNMPTransport.UDP, preferenceManager.getPreferenceSNMPTransport());
        assertEquals(SNMPAuthAlgorithm.MD5, preferenceManager.getPreferenceSNMPAuthAlgorithm());
        assertEquals(SNMPPrivAlgorithm.AES128, preferenceManager.getPreferenceSNMPPrivAlgorithm());
        assertFalse(preferenceManager.getPreferenceOnlyWifi());
        assertFalse(preferenceManager.getPreferenceNotification());
        assertFalse(preferenceManager.getPreferenceHighPrio());
        onView(withId(R.id.textview_activity_defaults_accesstype_label)).check(matches(withText("Type")));
        onView(withId(R.id.radiogroup_activity_defaults_accesstype)).check(matches(hasChildCount(4)));
        onView(withText("Ping")).check(matches(isChecked()));
        onView(withId(R.id.textview_activity_defaults_address_label)).check(matches(withText("Host / URL")));
        onView(withId(R.id.textview_activity_defaults_address)).check(matches(withText("192.168.178.1")));
        onView(withId(R.id.textview_activity_defaults_port_label)).check(matches(withText("Port")));
        onView(withId(R.id.textview_activity_defaults_port)).check(matches(withText("22")));
        onView(withId(R.id.textview_activity_defaults_interval_label)).check(matches(withText("Interval")));
        onView(withId(R.id.textview_activity_defaults_interval)).check(matches(withText("15")));
        onView(withId(R.id.textview_activity_defaults_interval_minutes)).check(matches(withText("minutes")));
        onView(withId(R.id.textview_activity_defaults_ping_count_label)).check(matches(withText("Ping count")));
        onView(withId(R.id.textview_activity_defaults_ping_count)).check(matches(withText("3")));
        onView(withId(R.id.textview_activity_defaults_ping_package_size_label)).check(matches(withText("Ping package size")));
        onView(withId(R.id.textview_activity_defaults_ping_package_size)).check(matches(withText("56")));
        onView(withId(R.id.textview_activity_defaults_connect_count_label)).check(matches(withText("Connect count")));
        onView(withId(R.id.textview_activity_defaults_connect_count)).check(matches(withText("1")));
        onView(withId(R.id.textview_activity_defaults_stop_on_success_label)).check(matches(withText("Stop on success")));
        onView(withId(R.id.switch_activity_defaults_stop_on_success)).check(matches(isNotChecked()));
        onView(withId(R.id.textview_activity_defaults_stop_on_success_on_off)).check(matches(withText("no")));
        onView(withId(R.id.textview_activity_defaults_snmp_settings_label)).check(matches(withText("SNMP settings")));
        onView(withId(R.id.textview_activity_defaults_only_wifi_label)).check(matches(withText("Only on WiFi")));
        onView(withId(R.id.switch_activity_defaults_only_wifi)).check(matches(isNotChecked()));
        onView(withId(R.id.textview_activity_defaults_only_wifi_on_off)).check(matches(withText("no")));
        onView(withId(R.id.textview_activity_defaults_notification_label)).check(matches(withText("Notifications")));
        onView(withId(R.id.switch_activity_defaults_notification)).check(matches(isNotChecked()));
        onView(withId(R.id.textview_activity_defaults_notification_on_off)).check(matches(withText("no")));
        onView(withId(R.id.textview_activity_defaults_high_prio_label)).check(matches(withText("High priority")));
        onView(withId(R.id.switch_activity_defaults_high_prio)).check(matches(isNotChecked()));
        onView(withId(R.id.textview_activity_defaults_high_prio_on_off)).check(matches(withText("no")));
        activityScenario.close();
    }

    @Test
    public void testDisplayDefaultValuesResolveRules() {
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(DefaultsActivity.class);
        PreferenceManager preferenceManager = getPreferenceManager();
        assertEquals("", preferenceManager.getPreferenceResolveMatchAddress());
        assertEquals(-1, preferenceManager.getPreferenceResolveMatchPort());
        assertEquals("", preferenceManager.getPreferenceResolveAddress());
        assertEquals(-1, preferenceManager.getPreferenceResolvePort());
        onView(withId(R.id.textview_activity_defaults_resolve_rules_label)).perform(scrollTo()).check(matches(withText("HTTP resolve rules")));
        onView(withId(R.id.cardview_activity_defaults_resolve_rules)).perform(scrollTo());
        onView(withId(R.id.cardview_activity_defaults_resolve_rules)).perform(click());
        onView(withId(R.id.edittext_dialog_resolve_edit_match_host)).check(matches(withText("not set")));
        onView(withId(R.id.edittext_dialog_resolve_edit_match_port)).check(matches(withText("not set")));
        onView(withId(R.id.edittext_dialog_resolve_edit_connect_to_host)).check(matches(withText("not set")));
        onView(withId(R.id.edittext_dialog_resolve_edit_connect_to_port)).check(matches(withText("not set")));
        onView(withId(R.id.imageview_dialog_resolve_edit_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testDisplayDefaultValuesCertificateSettings() {
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(DefaultsActivity.class);
        PreferenceManager preferenceManager = getPreferenceManager();
        assertFalse(preferenceManager.getPreferenceAllowLegacyTLS());
        assertFalse(preferenceManager.getPreferenceIgnoreSSLError());
        assertFalse(preferenceManager.getPreferenceFailureOnCertificateExpiry());
        assertEquals(30, preferenceManager.getPreferenceFailureOnCertificateExpiryDays());
        onView(withId(R.id.textview_activity_defaults_certificate_settings_label)).perform(scrollTo()).check(matches(withText("HTTP certificate settings")));
        onView(withId(R.id.cardview_activity_defaults_certificate_settings)).perform(scrollTo());
        onView(withId(R.id.cardview_activity_defaults_certificate_settings)).perform(click());
        onView(withId(R.id.switch_dialog_certificate_settings_allow_legacy_tls)).check(matches(isNotChecked()));
        onView(withId(R.id.switch_dialog_certificate_settings_ignore_ssl_error)).check(matches(isNotChecked()));
        onView(withId(R.id.switch_dialog_certificate_settings_failure_on_certificate_expiry)).check(matches(isNotChecked()));
        onView(withId(R.id.edittext_dialog_certificate_settings_expiry_days)).check(matches(withText("30")));
        onView(withId(R.id.imageview_dialog_certificate_settings_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testDisplayDefaultValuesChanged() {
        PreferenceManager preferenceManager = getPreferenceManager();
        preferenceManager.setPreferenceAccessType(AccessType.CONNECT);
        preferenceManager.setPreferenceAddress("127.0.0.1");
        preferenceManager.setPreferencePort(1024);
        preferenceManager.setPreferenceInterval(1);
        preferenceManager.setPreferencePingCount(8);
        preferenceManager.setPreferencePingPackageSize(1234);
        preferenceManager.setPreferenceConnectCount(9);
        preferenceManager.setPreferenceStopOnSuccess(true);
        preferenceManager.setPreferenceSNMPVersion(SNMPVersion.V1);
        preferenceManager.setPreferenceSNMPPort(162);
        preferenceManager.setPreferenceOnlyWifi(false);
        preferenceManager.setPreferenceNotification(true);
        preferenceManager.setPreferenceHighPrio(true);
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(DefaultsActivity.class);
        onView(withId(R.id.textview_activity_defaults_accesstype_label)).check(matches(withText("Type")));
        onView(withId(R.id.radiogroup_activity_defaults_accesstype)).check(matches(hasChildCount(4)));
        onView(withText("Connect")).check(matches(isChecked()));
        onView(withId(R.id.textview_activity_defaults_address_label)).check(matches(withText("Host / URL")));
        onView(withId(R.id.textview_activity_defaults_address)).check(matches(withText("127.0.0.1")));
        onView(withId(R.id.textview_activity_defaults_port_label)).check(matches(withText("Port")));
        onView(withId(R.id.textview_activity_defaults_port)).check(matches(withText("1024")));
        onView(withId(R.id.textview_activity_defaults_interval_label)).check(matches(withText("Interval")));
        onView(withId(R.id.textview_activity_defaults_interval)).check(matches(withText("1")));
        onView(withId(R.id.textview_activity_defaults_interval_minutes)).check(matches(withText("minute")));
        onView(withId(R.id.textview_activity_defaults_ping_count_label)).check(matches(withText("Ping count")));
        onView(withId(R.id.textview_activity_defaults_ping_count)).check(matches(withText("8")));
        onView(withId(R.id.textview_activity_defaults_ping_package_size_label)).check(matches(withText("Ping package size")));
        onView(withId(R.id.textview_activity_defaults_ping_package_size)).check(matches(withText("1234")));
        onView(withId(R.id.textview_activity_defaults_connect_count_label)).check(matches(withText("Connect count")));
        onView(withId(R.id.textview_activity_defaults_connect_count)).check(matches(withText("9")));
        onView(withId(R.id.textview_activity_defaults_stop_on_success_label)).check(matches(withText("Stop on success")));
        onView(withId(R.id.switch_activity_defaults_stop_on_success)).check(matches(isChecked()));
        onView(withId(R.id.textview_activity_defaults_stop_on_success_on_off)).check(matches(withText("yes")));
        onView(withId(R.id.textview_activity_defaults_snmp_settings_label)).perform(scrollTo()).check(matches(withText("SNMP settings")));
        onView(withId(R.id.textview_activity_defaults_only_wifi_label)).check(matches(withText("Only on WiFi")));
        onView(withId(R.id.switch_activity_defaults_only_wifi)).check(matches(isNotChecked()));
        onView(withId(R.id.textview_activity_defaults_only_wifi_on_off)).check(matches(withText("no")));
        onView(withId(R.id.switch_activity_defaults_notification)).perform(scrollTo());
        onView(withId(R.id.textview_activity_defaults_notification_label)).check(matches(withText("Notifications")));
        onView(withId(R.id.switch_activity_defaults_notification)).check(matches(isChecked()));
        onView(withId(R.id.textview_activity_defaults_notification_on_off)).check(matches(withText("yes")));
        onView(withId(R.id.switch_activity_defaults_high_prio)).perform(scrollTo());
        onView(withId(R.id.textview_activity_defaults_high_prio_label)).check(matches(withText("High priority")));
        onView(withId(R.id.switch_activity_defaults_high_prio)).check(matches(isChecked()));
        onView(withId(R.id.textview_activity_defaults_high_prio_on_off)).check(matches(withText("yes")));
        activityScenario.close();
    }

    @Test
    public void testDisplayDefaultValuesChangedResolveRules() {
        PreferenceManager preferenceManager = getPreferenceManager();
        preferenceManager.setPreferenceResolveMatchAddress("match.address");
        preferenceManager.setPreferenceResolveMatchPort(12);
        preferenceManager.setPreferenceResolveAddress("resolve.address");
        preferenceManager.setPreferenceResolvePort(25);
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(DefaultsActivity.class);
        onView(withId(R.id.textview_activity_defaults_resolve_rules_label)).perform(scrollTo()).check(matches(withText("HTTP resolve rules")));
        onView(withId(R.id.cardview_activity_defaults_resolve_rules)).perform(scrollTo());
        onView(withId(R.id.cardview_activity_defaults_resolve_rules)).perform(click());
        onView(withId(R.id.edittext_dialog_resolve_edit_match_host)).check(matches(withText("match.address")));
        onView(withId(R.id.edittext_dialog_resolve_edit_match_port)).check(matches(withText("12")));
        onView(withId(R.id.edittext_dialog_resolve_edit_connect_to_host)).check(matches(withText("resolve.address")));
        onView(withId(R.id.edittext_dialog_resolve_edit_connect_to_port)).check(matches(withText("25")));
        onView(withId(R.id.imageview_dialog_resolve_edit_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testDisplayDefaultValuesChangedCertificateSettings() {
        PreferenceManager preferenceManager = getPreferenceManager();
        preferenceManager.setPreferenceAllowLegacyTLS(true);
        preferenceManager.setPreferenceIgnoreSSLError(true);
        preferenceManager.setPreferenceFailureOnCertificateExpiry(true);
        preferenceManager.setPreferenceFailureOnCertificateExpiryDays(14);
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(DefaultsActivity.class);
        onView(withId(R.id.textview_activity_defaults_certificate_settings_label)).perform(scrollTo()).check(matches(withText("HTTP certificate settings")));
        onView(withId(R.id.cardview_activity_defaults_certificate_settings)).perform(scrollTo());
        onView(withId(R.id.cardview_activity_defaults_certificate_settings)).perform(click());
        onView(withId(R.id.switch_dialog_certificate_settings_allow_legacy_tls)).check(matches(isChecked()));
        onView(withId(R.id.switch_dialog_certificate_settings_ignore_ssl_error)).check(matches(isChecked()));
        onView(withId(R.id.switch_dialog_certificate_settings_failure_on_certificate_expiry)).check(matches(isChecked()));
        onView(withId(R.id.edittext_dialog_certificate_settings_expiry_days)).check(matches(withText("14")));
        onView(withId(R.id.imageview_dialog_certificate_settings_cancel)).perform(click());
        activityScenario.close();
    }

    @Test
    public void testDisplayValues() {
        ActivityScenario<?> activityScenario = launchSettingsInputActivity(DefaultsActivity.class);
        onView(withText("Download")).perform(click());
        onView(withId(R.id.textview_activity_defaults_address)).perform(click());
        onView(withId(R.id.edittext_dialog_settings_input_value)).perform(replaceText("localhost"));
        onView(withId(R.id.imageview_dialog_settings_input_ok)).perform(click());
        onView(withId(R.id.textview_activity_defaults_port)).perform(click());
        onView(withId(R.id.edittext_dialog_settings_input_value)).perform(replaceText("80"));
        onView(withId(R.id.imageview_dialog_settings_input_ok)).perform(click());
        onView(withId(R.id.textview_activity_defaults_interval)).perform(click());
        onView(withId(R.id.edittext_dialog_settings_input_value)).perform(replaceText("11"));
        onView(withId(R.id.imageview_dialog_settings_input_ok)).perform(click());
        onView(withId(R.id.textview_activity_defaults_ping_count)).perform(click());
        onView(withId(R.id.edittext_dialog_settings_input_value)).perform(replaceText("10"));
        onView(withId(R.id.imageview_dialog_settings_input_ok)).perform(click());
        onView(withId(R.id.textview_activity_defaults_ping_package_size)).perform(click());
        onView(withId(R.id.edittext_dialog_settings_input_value)).perform(replaceText("64"));
        onView(withId(R.id.imageview_dialog_settings_input_ok)).perform(click());
        onView(withId(R.id.textview_activity_defaults_connect_count)).perform(click());
        onView(withId(R.id.edittext_dialog_settings_input_value)).perform(replaceText("10"));
        onView(withId(R.id.imageview_dialog_settings_input_ok)).perform(click());
        onView(withId(R.id.switch_activity_defaults_stop_on_success)).perform(scrollTo());
        onView(withId(R.id.switch_activity_defaults_stop_on_success)).perform(click());
        onView(withId(R.id.cardview_activity_defaults_snmp_settings)).perform(scrollTo());
        onView(withId(R.id.cardview_activity_defaults_snmp_settings)).perform(click());
        onView(withId(R.id.radiobutton_dialog_snmp_defaults_snmp_version_v1)).perform(click());
        onView(withId(R.id.edittext_dialog_snmp_defaults_snmp_port)).perform(replaceText("162"));
        onView(withId(R.id.imageview_dialog_snmp_defaults_ok)).perform(click());
        onView(withId(R.id.switch_activity_defaults_only_wifi)).perform(scrollTo());
        onView(withId(R.id.switch_activity_defaults_only_wifi)).perform(click());
        onView(withId(R.id.switch_activity_defaults_notification)).perform(scrollTo());
        onView(withId(R.id.switch_activity_defaults_notification)).perform(click());
        onView(withId(R.id.switch_activity_defaults_high_prio)).perform(scrollTo());
        onView(withId(R.id.switch_activity_defaults_high_prio)).perform(click());
        onView(withText("Download")).check(matches(isChecked()));
        onView(withId(R.id.textview_activity_defaults_address_label)).check(matches(withText("Host / URL")));
        onView(withId(R.id.textview_activity_defaults_address)).check(matches(withText("localhost")));
        onView(withId(R.id.textview_activity_defaults_port_label)).check(matches(withText("Port")));
        onView(withId(R.id.textview_activity_defaults_port)).check(matches(withText("80")));
        onView(withId(R.id.textview_activity_defaults_interval_label)).check(matches(withText("Interval")));
        onView(withId(R.id.textview_activity_defaults_interval)).check(matches(withText("11")));
        onView(withId(R.id.textview_activity_defaults_interval_minutes)).check(matches(withText("minutes")));
        onView(withId(R.id.textview_activity_defaults_ping_count_label)).check(matches(withText("Ping count")));
        onView(withId(R.id.textview_activity_defaults_ping_count)).check(matches(withText("10")));
        onView(withId(R.id.textview_activity_defaults_ping_package_size_label)).check(matches(withText("Ping package size")));
        onView(withId(R.id.textview_activity_defaults_ping_package_size)).check(matches(withText("64")));
        onView(withId(R.id.textview_activity_defaults_connect_count_label)).check(matches(withText("Connect count")));
        onView(withId(R.id.textview_activity_defaults_connect_count)).check(matches(withText("10")));
        onView(withId(R.id.textview_activity_defaults_stop_on_success_label)).check(matches(withText("Stop on success")));
        onView(withId(R.id.switch_activity_defaults_stop_on_success)).check(matches(isChecked()));
        onView(withId(R.id.textview_activity_defaults_stop_on_success_on_off)).check(matches(withText("yes")));
        onView(withId(R.id.textview_activity_defaults_snmp_settings_label)).perform(scrollTo()).check(matches(withText("SNMP settings")));
        onView(withId(R.id.textview_activity_defaults_only_wifi_label)).check(matches(withText("Only on WiFi")));
        onView(withId(R.id.switch_activity_defaults_only_wifi)).check(matches(isChecked()));
        onView(withId(R.id.textview_activity_defaults_only_wifi_on_off)).check(matches(withText("yes")));
